--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Vasudevweb</title>
         <link rel="stylesheet" href="waste.css">
+        
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XFB46JZK3L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XFB46JZK3L');
+</script>
     </head>
     <body>
       <!-- <div class="nav">
