--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XFB46JZK3L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XFB46JZK3L');
+</script>
   <title>Email Us</title>
   <link rel="stylesheet" href="photo.css">
   <!-- <style>
