--- a/ppt.html
+++ b/ppt.html
@@ -30,7 +30,7 @@
         allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
     <div class="ct">
         <h3 id="info">You Can Contact Us By</h3>
-        <span> email id -vasudevweb1@gmail.com
+        <span> email id -help.vasudevweb@gmail.com
 
         </span>
         <h3 id="time"> we will contact you within 3 working days </h3>
